fix: select z-index box and list

--- a/src/Input/Select/styles.scss
+++ b/src/Input/Select/styles.scss
@@ -31,6 +31,7 @@ $breakSelectModalMovilTop: $breakSelectModalMovil + 1px;
                 border-radius: 1rem;
                 margin-top: 0.5rem;
                 overflow: auto;
+                z-index: 1;
                 .fenext-select {
                     &-option {
                         aspect-ratio: 1/1;
@@ -94,7 +95,7 @@ $breakSelectModalMovilTop: $breakSelectModalMovil + 1px;
                 border-radius: 1rem;
                 margin-top: 0.5rem;
                 overflow: auto;
-
+                z-index: 1;
                 .fenext-select {
                     &-option {
                         border-radius: 0.75rem;
